# DeepAPI

./: .gitignore  Dockerfile  README.md  app.py  app.yml  environment.yml  main.py  pyproject.toml  requirements.txt  setup.py
backend/: app.py
deepapi/: __init__.py  _main.py
deepapi/api/: __init__.py
deepapi/dataset/: __init__.py  cifar10.py  imagenet.py  imagenet_class_index.py
deepapi/models/: __init__.py  inceptionv3.py  resnet50.py  vgg16.py
deepapi/static/: index.html  script.js  upload.js
deepapi/utils/: __init__.py  response.py
docs/: api.md
models/: inceptionv3.py  resnet50.py  vgg16.py
static/: index.html  script.js  style.css  upload.js
test/: client.py  client_np.py  minimal.py  minimal_np.py  multi-client.py  test_deepapi.py  test_minimal.py  test_multi_client.py
