[build-system]
requires = ["setuptools>=61.0",
            "flask==2.0.1",
            "waitress==2.0.0",
            "grpcio==1.40.0",
            "h5py==3.1.0",
            "keras==2.6.0",
            "keras-preprocessing==1.1.2",
            "numpy==1.19.5",
            "pillow==8.3.2",
            "requests==2.26.0",
            "tensorflow==2.6.0",
            "tensorflow-estimator==2.6.0"
]
build-backend = "setuptools.build_meta"

[project.scripts]
deepapi = "deepapi._main:main"

[project]
name = "deepapi"
version = "0.2.0"
authors = [
  { name="wuhanstudio", email="wuhanstudios@gmail.com" },
]
description = "Deep Learning as a Cloud API Service."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/wuhanstudio/deepapi"
"Bug Tracker" = "https://github.com/wuhanstudio/deepapi/issues"
